--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>EU5 Campaign Chronicle - Multi-Campaign Tracker</title>
     <!-- PASTE ALL YOUR CSS HERE FROM YOUR ORIGINAL paste.txt FILE -->
     <style>
+            <style>
+        :root {
+            /* Primitive Color Tokens */
+            --color-white: rgba(255, 255, 255, 1);
+            /* ... rest van de CSS ... */
+        }
+        
+        body {
+            /* styles */
+        }
+        
+        /* ... alle andere CSS ... */
+    </style>
+
         /* CAMPAIGN SELECTOR STYLES - ADD THIS TO YOUR CSS */
         .campaign-selector-section {
             background: linear-gradient(to bottom, #2a2a2a 0%, #252525 100%);
